# kg-discovery

./: .dockerignore  .gitignore  Dockerfile  README.md  gliner_glirel_config.json  pyproject.toml  requirements.txt  run_pipeline.sh
output/: 01_characterization.txt  02_counts.json  02_entities.json  02_entities.txt  03_counts.json  03_relations.json  03_relations.txt  proposed_schema.md
scripts/: 00_ingest_s3.py  01_characterize.py  02_discover_entities.py  03_discover_relations.py  common.py
