[project]
name = "kg-discovery"
version = "0.1.0"
description = "Corpus-grounded KG schema discovery (entity + relation types) with no pre-supplied labels and no generative LLM."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "spacy>=3.7,<4",
    "click>=8",
    "scikit-learn>=1.4",        # HDBSCAN available from 1.3+
    "sentence-transformers>=3",
    "gliner2>=0.1",             # zero-shot NER (script 02)
    "glirel>=0.1",              # zero-shot relation extraction (script 03)
    "boto3>=1.34",              # S3 ingestion (script 00)
    # General English model — no domain-specific packages required.
    "en_core_web_md",
]

[tool.uv.sources]
en_core_web_md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl" }
# Discovery is CPU-only by default. On Linux (Docker), pull the CPU torch build
# to avoid ~5 GB of unused CUDA libraries. macOS keeps its default CPU/MPS build.
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
package = false
